fix: 어떤 환경이라도 resource파일 읽을 수 있도록 변경 기존 코드는 jar로 빌드 후 실행 시 html파일을 못 읽는 문제가 있었음, ide의 실행 환경과 resource의 참조 경로가 달랐기 때문에 해당 부분 수정