@@ -4,15 +4,10 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.util.HashMap;
 
 public class MyHttpServletResponse {
-  private static final String absoluteRootPath = Paths.get("").toAbsolutePath().toString();
-  private static final String templateResourcePath = "/src/main/resources/templates";
-  private static final String staticResourcePath = "/src/main/resources/static";
   private static final Logger logger = LoggerFactory.getLogger(MyHttpServletResponse.class);
   private byte[] body;
   private final HashMap<String,String> headers = new HashMap<>();
@@ -38,11 +33,11 @@ public class MyHttpServletResponse {
     httpStatus=HttpStatus.BAD_REQUEST;
   }
   public static MyHttpServletResponse staticResource(String resourcePath){
-    String absoluteResourcePathString = absoluteRootPath+staticResourcePath+resourcePath;
-    Path absoluteResourcePath = Paths.get(absoluteResourcePathString);
     byte[] body;
-    try {
-      body = Files.readAllBytes(absoluteResourcePath);
+    try (InputStream in = MyHttpServletResponse.class.getResourceAsStream("/static"+resourcePath)){
+      if(in==null)
+        throw new RuntimeException();
+      body = in.readAllBytes();
     }catch (IOException ioException){
       throw new RuntimeException();
     }
@@ -64,10 +59,10 @@ public class MyHttpServletResponse {
   //resourcePath가 주어졌을 때, 해당 경로의 resource를 읽어오는 메서드.
   // 추후 다른 형식의 데이터를 읽어오도록 오버라이딩해서 확장 가능
   public void setBody(String resourcePath){
-    String absoluteResourcePathString = absoluteRootPath+templateResourcePath+resourcePath;
-    Path absoluteResourcePath = Paths.get(absoluteResourcePathString);
-    try {
-      body = Files.readAllBytes(absoluteResourcePath);
+    try (InputStream in = this.getClass().getResourceAsStream(resourcePath)){
+      if(in==null)
+        throw new RuntimeException();
+      body = in.readAllBytes();
     }catch (IOException ioException){
       logger.error(ioException.getMessage());
     }
